[gd_scene load_steps=8 format=3 uid="uid://c5i3e2xoursyb"]

[ext_resource type="Texture2D" uid="uid://d32qnhr7848oj" path="res://Menus/Interface windows.png" id="1_1mhvi"]
[ext_resource type="Script" uid="uid://cc22sosg7g1hw" path="res://scenes/AIOptions.gd" id="1_ve6eu"]
[ext_resource type="FontFile" uid="uid://b33kuu0osw1kp" path="res://fonts/CyberpunkCraftpixPixel.otf" id="2_bwv1h"]
[ext_resource type="Theme" uid="uid://dly54hmbgdvr7" path="res://Themes/OptionsButton.tres" id="3_jxe22"]
[ext_resource type="Theme" uid="uid://4oc4y8tfb6ds" path="res://Themes/PauseButton.tres" id="4_80s8k"]
[ext_resource type="Texture2D" uid="uid://tslrtc7kyasm" path="res://buttons/close_icon.png" id="5_ve6eu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ve6eu"]
texture = ExtResource("1_1mhvi")
region_rect = Rect2(1339, 734, 241, 227)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ve6eu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -254.375
offset_right = 264.0
offset_bottom = 254.375
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ve6eu")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 70

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_bwv1h")
theme_override_font_sizes/font_size = 45
text = "AI Mode"

[node name="EasyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_jxe22")
theme_override_font_sizes/font_size = 30
text = "Easy"

[node name="HardButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme = ExtResource("3_jxe22")
theme_override_font_sizes/font_size = 30
text = "Hard"

[node name="Exit Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1133.0
offset_top = 331.0
offset_right = 1177.0
offset_bottom = 375.0
theme = ExtResource("4_80s8k")
icon = ExtResource("5_ve6eu")
icon_alignment = 1

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/EasyButton" to="." method="_on_easy_ai_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="Exit Button" to="." method="_on_exit_button_pressed"]
